# alpha

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  minishop.c
exteral/jack/include/: jack.h
exteral/log4c/include/: log4c.h
include/: alpha.h  templates.h
include/alpha/: common.h  http.h  request.h  request_dto.h  response.h  router.h  templates.h
src/: alpha.c  request.c  response.c
